AddFilm route NewFilm.do

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,7 +28,7 @@
 <div>
 	<h3>Add New Film</h3>
 	<h4>Please provide the following details:</h4>
-	<form action="" method="get">
+	<form action="NewFilm.do" method="post">
 	<label for="title">Title:</label> <input type="text" name="title"><br>
 	<label for="description">Description:</label> <input type="text" name="description"><br>
 	<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear"><br>
