--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -33,7 +33,7 @@
 	<label for="description">Description:</label> <input type="text" name="description"><br>
 	<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear"><br>
 	<label for="rating">Rating:</label> <input type="text" name="rating"><br>
-	<input type="submit" value="Search">
+	<input type="submit" value="Add">
 	</form>
 </div>
 </body>
