--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,35 +6,38 @@
 </head>
 <body>
 
-<!-- Search by Film ID -->
-<div>
-	<h3>Search by Film ID</h3>
-	<form action="GetFilmData.do" method="get">
-	<label for="filmId">ID: </label> <input type="text" name="filmId" size="5"><br>
-	<input type="submit" value="Search">
-	</form>
-</div>
+	<!-- Search by Film ID -->
+	<div>
+		<h3>Search by Film ID</h3>
+		<form action="GetFilmData.do" method="get">
+			<label for="filmId">ID: </label> <input type="text" name="filmId"
+				size="5"><br> <input type="submit" value="Search">
+		</form>
+	</div>
 
-<!-- Search by Keyword -->
-<div>
-	<h3>Search by Keyword</h3>
-	<form action="GetFilmData.do" method="get">
-	<label for="filmKeyword">Keyword: </label> <input type="text" name="filmKeyword"><br>
-	<input type="submit" value="Search">
-	</form>
-</div>
+	<!-- Search by Keyword -->
+	<div>
+		<h3>Search by Keyword</h3>
+		<form action="GetFilmData.do" method="get">
+			<label for="filmKeyword">Keyword: </label> <input type="text"
+				name="filmKeyword"><br> <input type="submit"
+				value="Search">
+		</form>
+	</div>
 
-<!-- Add New Film -->
-<div>
-	<h3>Add New Film</h3>
-	<h4>Please provide the following details:</h4>
-	<form action="NewFilm.do" method="post">
-	<label for="title">Title:</label> <input type="text" name="title"><br>
-	<label for="description">Description:</label> <input type="text" name="description"><br>
-	<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear"><br>
-	<label for="rating">Rating:</label> <input type="text" name="rating"><br>
-	<input type="submit" value="Add">
-	</form>
-</div>
+	<!-- Add New Film -->
+	<div>
+		<h3>Add New Film</h3>
+		<h4>Please provide the following details:</h4>
+		<form action="NewFilm.do" method="post">
+			<label for="title">Title:</label> <input type="text" name="title"><br>
+			<label for="description">Description:</label> <input type="text"
+				name="description"><br> <label for="releaseYear">Release
+				Year:</label> <input type="text" name="releaseYear"><br> <label
+				for="rating">Rating:</label> <input type="text" name="rating"><br>
+			<input type="submit" value="Add">
+		</form>
+	</div>
+
 </body>
 </html>
