--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,10 +31,27 @@
 		<h4>Please provide the following details:</h4>
 		<form action="NewFilm.do" method="post">
 			<label for="title">Title:</label> <input type="text" name="title"><br>
-			<label for="description">Description:</label> <input type="text"
-				name="description"><br> <label for="releaseYear">Release
-				Year:</label> <input type="text" name="releaseYear"><br> <label
-				for="rating">Rating:</label> <input type="text" name="rating"><br>
+			<label for="description">Description:</label> <input type="text" name="description"><br> 
+			<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear"><br> 
+			<label for="rentalRate">Rental Rate:</label> <input type="text" name="rentalRate"><br> 
+			<label for="length">Length:</label> <input type="text" name="length"><br> 
+			<label for="replacementCost">Replacement Cost:</label> <input type="text" name="replacementCost"><br> 
+			<label for="rating">Rating:</label> 
+				<select>
+				  <option value="G">G</option>
+				  <option value="PG">PG</option>
+				  <option value="PG13">PG 13</option>
+				  <option value="R">R</option>
+				  <option value="NC17">NC 17</option>
+				</select><br>
+			<label for="specialFeatures">Special Features:</label> 
+				<select>
+				  <option value="Trailers">Trailers</option>
+				  <option value="Commentaries">Commentaries</option>
+				  <option value="DeletedScenes">Deleted Scenes</option>
+				  <option value="BehindTheScenes">Behind The Scenes</option>
+				</select><br>
+			<!-- <label for="category">Category:</label> <input type="text" name="category"><br> -->
 			<input type="submit" value="Add">
 		</form>
 	</div>
