--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -32,9 +32,19 @@
 		<form action="NewFilm.do" method="post">
 			<label for="title">Title:</label> <input type="text" name="title"><br>
 			<label for="description">Description:</label> <input type="text" name="description"><br> 
-			<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear"><br> 
-			<label for="rentalRate">Rental Rate:</label> <input type="text" name="rentalRate"><br> 
-			<label for="length">Length:</label> <input type="text" name="length"><br> 
+			<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear" size="4"><br> 
+			<label for="languageId">Language ID:</label> 
+				<select>
+				  <option value="1">1: English</option>
+				  <option value="2">2: Italian</option>
+				  <option value="3">3: Japanese</option>
+				  <option value="4">4: Mandarin</option>
+				  <option value="5">5: French</option>
+				  <option value="6">6: German</option>
+				</select><br>
+			<label for="rentalDuration">Rental Duration:</label> <input type="text" name="rentalDuration" size="4"><br>
+			<label for="rentalRate">Rental Rate:</label> <input type="text" name="rentalRate" size="10"><br> 
+			<label for="length">Length:</label> <input type="text" name="length" size="4"><br> 
 			<label for="replacementCost">Replacement Cost:</label> <input type="text" name="replacementCost"><br> 
 			<label for="rating">Rating:</label> 
 				<select>
@@ -45,13 +55,12 @@
 				  <option value="NC17">NC 17</option>
 				</select><br>
 			<label for="specialFeatures">Special Features:</label> 
-				<select>
+				<select multiple>
 				  <option value="Trailers">Trailers</option>
 				  <option value="Commentaries">Commentaries</option>
 				  <option value="DeletedScenes">Deleted Scenes</option>
 				  <option value="BehindTheScenes">Behind The Scenes</option>
 				</select><br>
-			<!-- <label for="category">Category:</label> <input type="text" name="category"><br> -->
 			<input type="submit" value="Add">
 		</form>
 	</div>
