Added default value for AddFilm

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -43,13 +43,13 @@
 				  <option value="5">5: French</option>
 				  <option value="6">6: German</option>
 				</select><br>
-			<label for="rentalDuration">Rental Duration:</label> <input type="text" name="rentalDuration" size="4"><br>
-			<label for="rentalRate">Rental Rate:</label> <input type="text" name="rentalRate" size="10"><br> 
+			<label for="rentalDuration">Rental Duration:</label> <input type="text" name="rentalDuration" size="4" value="3"><br>
+			<label for="rentalRate">Rental Rate:</label> <input type="text" name="rentalRate" size="10" value="4.99"><br> 
 			<label for="length">Length:</label> <input type="text" name="length" size="4"><br> 
-			<label for="replacementCost">Replacement Cost:</label> <input type="text" name="replacementCost"><br> 
+			<label for="replacementCost">Replacement Cost:</label> <input type="text" name="replacementCost" value="19.99"><br> 
 			<label for="rating">Rating:</label> 
 				<select>
-				  <option value="G">G</option>
+				  <option value="G" selected>G</option>
 				  <option value="PG">PG</option>
 				  <option value="PG13">PG 13</option>
 				  <option value="R">R</option>
@@ -57,7 +57,7 @@
 				</select><br>
 			<label for="specialFeatures">Special Features:</label><br>
  				<select multiple>
-				  <option value="Trailers">Trailers</option>
+				  <option value="Trailers" >Trailers</option>
 				  <option value="Commentaries">Commentaries</option>
 				  <option value="DeletedScenes">Deleted Scenes</option>
 				  <option value="BehindTheScenes">Behind The Scenes</option>
