--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,8 +11,8 @@
 		<h3>Search by Film ID</h3>
 		<form action="GetFilmData.do" method="get">
 			<label for="filmId">ID: </label> 
-			<input type="text" name="filmId" size="5"><br> 
-			<input type="submit" value="Search">
+			<input type="text" name="filmId" size="5" /><br> 
+			<input type="submit" value="Search" />
 		</form>
 	</div>
 
@@ -21,8 +21,8 @@
 		<h3>Search by Keyword</h3>
 		<form action="GetFilmData.do" method="get">
 			<label for="filmKeyword">Keyword: </label> 
-			<input type="text" name="filmKeyword"><br> 
-			<input type="submit" value="Search">
+			<input type="text" name="filmKeyword" /><br> 
+			<input type="submit" value="Search" />
 		</form>
 	</div>
 
@@ -31,9 +31,9 @@
 		<h3>Add New Film</h3>
 		<h4>Please provide the following details:</h4>
 		<form action="NewFilm.do" method="post">
-			<label for="title">Title:</label> <input type="text" name="title"><br>
-			<label for="description">Description:</label> <input type="text" name="description"><br> 
-			<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear" size="4"><br> 
+			<label for="title">Title:</label> <input type="text" name="title" /><br>
+			<label for="description">Description:</label> <input type="text" name="description" /><br> 
+			<label for="releaseYear">Release Year:</label> <input type="text" name="releaseYear" size="4" /><br> 
 			<label for="languageId">Language ID:</label> 
 				<select>
 				  <option value="1">1: English</option>
@@ -43,10 +43,10 @@
 				  <option value="5">5: French</option>
 				  <option value="6">6: German</option>
 				</select><br>
-			<label for="rentalDuration">Rental Duration:</label> <input type="text" name="rentalDuration" size="4" value="3"><br>
-			<label for="rentalRate">Rental Rate:</label> <input type="text" name="rentalRate" size="10" value="4.99"><br> 
-			<label for="length">Length:</label> <input type="text" name="length" size="4"><br> 
-			<label for="replacementCost">Replacement Cost:</label> <input type="text" name="replacementCost" value="19.99"><br> 
+			<label for="rentalDuration">Rental Duration:</label> <input type="text" name="rentalDuration" size="4" value="3" /><br>
+			<label for="rentalRate">Rental Rate:</label> <input type="text" name="rentalRate" size="10" value="4.99" /><br> 
+			<label for="length">Length:</label> <input type="text" name="length" size="4" /><br> 
+			<label for="replacementCost">Replacement Cost:</label> <input type="text" name="replacementCost" value="19.99" /><br> 
 			<label for="rating">Rating:</label> 
 				<select>
 				  <option value="G" selected>G</option>
@@ -62,8 +62,21 @@
 				  <option value="DeletedScenes">Deleted Scenes</option>
 				  <option value="BehindTheScenes">Behind The Scenes</option>
 				</select><br> 
-			<input type="submit" value="Add">
+			<input type="submit" value="Add" />
 		</form>
+	</div>
+	<hr>
+	
+	<!-- Search by Actor ID -->
+	<div>
+		<h3>Search by Actor ID</h3>
+		<form action="GetActorData.do" method="get">
+			<label for="actorId">Id: </label>
+			<input type="number" name="actorId" size="5" />
+			<input type="submit" value="Search" />
+		</form>
+		
+		
 	</div>
 
 </body>
